--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@sveltejs/adapter-auto": "^6.0.0",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@types/three": "^0.176.0",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^3.0.0",
@@ -34,6 +35,7 @@
 	"dependencies": {
 		"@sveltejs/adapter-static": "^3.0.8",
 		"gsap": "^3.13.0",
-		"lenis": "^1.3.1"
+		"lenis": "^1.3.1",
+		"three": "^0.176.0"
 	}
 }
