--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,7 @@
 	"singleQuote": false,
 	"trailingComma": "none",
 	"printWidth": 100,
+	"endOfLine": "crlf",
 	"plugins": ["prettier-plugin-svelte"],
 	"overrides": [
 		{
