--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 	"dependencies": {
 		"@sveltejs/adapter-static": "^3.0.8",
 		"gsap": "^3.13.0",
+		"swiper": "^11.2.10",
 		"three": "^0.176.0"
 	}
 }
